[package]
edition = "2024"
name = "gufo_snmp"
version = "0.9.0"

[lib]
crate-type = ["cdylib"] # Comment for bench
# crate-type = ["cdylib", "rlib"] # Uncomment for bench
name = "gufo_snmp"

[profile.release]
lto = "fat" # Full link-time optimization
strip = "debuginfo" 

[dependencies]
aes = "0.8"
cbc = "0.1"
cfb-mode = "0.8"
cipher = "0.4"
des = "0.8"
digest = "0.10"
enum_dispatch = "0.3"
md-5 = "0.10"
nom = "7.1"
pyo3 = {version = "0.26", features = ["extension-module"]}
rand = "0.9"
sha1 = "0.10"
socket2 = {version = "0.5", features = ["all"]}

[dev-dependencies]
criterion = "0.4"
iai = "0.1"
test-case = "3"

# [[bench]]
# harness = false
# name = "cri_decode"

# [[bench]]
# harness = false
# name = "cri_encode"

[[bench]]
harness = false
name = "iai_decode"

[[bench]]
harness = false
name = "iai_encode"

[[bench]]
harness = false
name = "iai_buf"

[[bench]]
harness = false
name = "iai_auth"
