[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]

[tool.black]
line-length = 79
target-version = ['py39']

[tool.coverage.run]
omit = ["*tests*", "*examples*"]

[tool.coverage.html]
directory = "dist/coverage"

[tool.cibuildwheel]
before-test = "pip install -r {project}/.requirements/test.txt"
test-command = "pytest -v {project}/tests"

[tool.cibuildwheel.linux]
before-all = "./tools/build/setup-rust.sh && pip install -r ./.requirements/build.txt"
manylinux-aarch64-image = "manylinux2014"
# manylinux-i686-image = "manylinux_2_24"
# manylinux-ppc64le-image = "manylinux_2_24"
# manylinux-pypy_aarch64-image = "manylinux_2_24"
# manylinux-pypy_i686-image = "manylinux_2_24"
# manylinux-pypy_x86_64-image = "manylinux_2_24"
# manylinux-s390x-image = "manylinux_2_24"
manylinux-x86_64-image = "manylinux2014"
musllinux-aarch64-image = "musllinux_1_1"
# musllinux-i686-image = "musllinux_1_1"
# musllinux-ppc64le-image = "musllinux_1_1"
# musllinux-s390x-image = "musllinux_1_1"
musllinux-x86_64-image = "musllinux_1_1"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [".git", "build", "dist"]
line-length = 79
# Assume Python 3.9
target-version = "py39"
# Enable
select = [
  "E", # Pycodestyle Error
  "F", # Pyflakes
  "W", # Pycodestyle Warning
  "C90", # mccabe
  "I", # isort
  "D", # Pydocstyle
  "YTT", # flake8-2020
  "ANN", # flake8-annotations
  "S", # flake8-bandit
  "BLE", # flake8-blind-except
  "B", # flake8-bugbear
  "A", # flake8-builtins
  "C4", # flake8-comprehensions 
  "EM", # flake8-errmsg
  "ISC", # flake8-implicit-str-concat
  "ICN", # flake8-import-conventions
  "PT", # flake8-pytest-style
  "RET", # flake8-return
  "SIM", # flake8-simplify
  "PLC", # pylint
  "PLE", # pylint
  "PLR", # pylint
  "PLW", # pylint
  "PIE", # flake8-pie
  "RUF", # ruff specific
]
# Always autofix, but never try to fix `F401` (unused imports).
fix = true
ignore = ["D203", "D212", "D107", "PLR0913"]
unfixable = ["F401"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 15

[tool.ruff.per-file-ignores]
# Ignore `E402` (import violations) in all `__init__.py` files
"__init__.py" = ["E402"]
"examples/*.py" = [
  "D100", # Missing docstring in public module
  "D103", # Missing docstring in public function
]
"tests/*.py" = [
  "D100", # Missing docstring in public module
  "D103", # Missing docstring in public function
  "S101", # Use of assert detected
  "PT011", # {exc} is too broad, set the `match` parameter or use a more specific exception.
  "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
]
