[metadata]
name = gufo_snmp
version = attr:gufo.snmp.__version__
author = Gufo Labs
url = https://github.com/gufolabs/gufo_snmp/
long_description = file:README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
keywords = error
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    Programming Language :: Rust
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: BSD License
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Networking
    Topic :: System :: Networking :: Monitoring
    Operating System :: POSIX :: Linux
    Typing :: Typed
project_urls =
    Documentation = https://docs.gufolabs.com/gufo_snmp/
    Source Code = https://github.com/gufolabs/gufo_snmp/
    Bug Tracker = https://github.com/gufolabs/gufo_snmp/issues
    Changelog = https://github.com/gufolabs/gufo_snmp/blob/master/CHANGELOG.md

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.8
zip_safe = False
include_package_data = True

[options.packages.find]
where = src

[flake8]
ignore = E203,W503

[build_rust]
inplace = True
release = True

[options.package_data]
* = py.typed